force-app/main/default/objects/Contact_Eligibility__c/Contact_Eligibility__c.object-meta.xml
<CustomObject>
    <description>what contact is eligible for based on the contacts relation to injured / deceased etc</description>
    <label>Contact Eligibility</label>
    <nameField>
        <label>Contact Eligibility Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Contact Eligibilities</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>