force-app/main/default/objects/Contact_Eligibility__c/fields/Amount_Eligible__c.field-meta.xml
<CustomField>
    <fullName>Amount_Eligible__c</fullName>
    <label>Eligible Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>