force-app/main/default/objects/Contact_Eligibility__c/fields/amount_for_flow__c.field-meta.xml
<CustomField>
    <fullName>amount_for_flow__c</fullName>
    <label>amount for flow</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>