force-app/main/default/objects/Contact_Eligibility__c/fields/Amount_from_Eligibility_Table__c.field-meta.xml
<CustomField>
    <fullName>Amount_from_Eligibility_Table__c</fullName>
    <formula>Eligibity_Table__r.Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Amount from Eligibility Table</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>