force-app/main/default/objects/Contact_Eligibility__c/fields/Amount_from_Other_Eligibility__c.field-meta.xml
<CustomField>
    <fullName>Amount_from_Other_Eligibility__c</fullName>
    <label>Amount from Other Eligibility</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>