force-app/main/default/objects/Contact_Eligibility__c/fields/BL_Eligibility_Type__c.field-meta.xml
<CustomField>
    <fullName>BL_Eligibility_Type__c</fullName>
    <label>BL Eligibility Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Temporary</fullName>
            </value>
            <value>
                <fullName>Permanent</fullName>
            </value>
            <value>
                <fullName>זמני</fullName>
                <isActive>false</isActive>
                <label>זמני</label>
            </value>
            <value>
                <fullName>צמיתה</fullName>
                <isActive>false</isActive>
                <label>צמיתה</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>