force-app/main/default/objects/Contact_Eligibility__c/fields/Contact_Age__c.field-meta.xml
<CustomField>
    <fullName>Contact_Age__c</fullName>
    <formula>Contact__r.Age__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contact Age</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>