force-app/main/default/objects/Contact_Eligibility__c/fields/Cumulative_eligibility__c.field-meta.xml
<CustomField>
    <fullName>Cumulative_eligibility__c</fullName>
    <defaultValue>false</defaultValue>
    <label>זכאות מצטברת</label>
    <type>Checkbox</type>
</CustomField>