force-app/main/default/objects/Contact_Eligibility__c/fields/Eligibility_end_date__c.field-meta.xml
<CustomField>
    <fullName>Eligibility_end_date__c</fullName>
    <label>Eligibility end date</label>
    <type>Date</type>
</CustomField>