force-app/main/default/objects/Contact_Eligibility__c/fields/Eligibility_type_multi__c.field-meta.xml
<CustomField>
    <fullName>Eligibility_type_multi__c</fullName>
    <label>Eligibility type multi select not in use</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Returned Hostage</fullName>
            </value>
            <value>
                <fullName>Bereaved parents</fullName>
            </value>
            <value>
                <fullName>Widow</fullName>
            </value>
            <value>
                <fullName>Guardian for orphans from two parents</fullName>
            </value>
            <value>
                <fullName>Parents of a hostage</fullName>
            </value>
            <value>
                <fullName>Spouse of a hostage</fullName>
            </value>
            <value>
                <fullName>Sibling or child of a hostage (18-30)</fullName>
            </value>
            <value>
                <fullName>Orphan from two parents</fullName>
            </value>
            <value>
                <fullName>Survivor from the 7.10 party</fullName>
            </value>
            <value>
                <fullName>Victims of hostilities recognized by BL</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>