force-app/main/default/objects/Contact_Eligibility__c/fields/Eligibity_Table__c.field-meta.xml
<CustomField>
    <fullName>Eligibity_Table__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Eligibility Table</label>
    <referenceTo>Eligibility_Table__c</referenceTo>
    <relationshipLabel>Contact Eligibilities</relationshipLabel>
    <relationshipName>Contact_Eligibilities</relationshipName>
    <type>Lookup</type>
</CustomField>