force-app/main/default/objects/Contact_Eligibility__c/fields/Eligible_Amount_frm__c.field-meta.xml
<CustomField>
    <fullName>Eligible_Amount_frm__c</fullName>
    <formula>If(ISPICKVAL(Status__c,&quot;Complete&quot;) , 0 ,
 (If(ISPICKVAL(Status__c,&quot;New&quot;), 25000,
(If(ISPICKVAL(Status__c,&quot;Approved&quot;),25000,
0)
))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Eligible Amount frm</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>