force-app/main/default/objects/Contact_Eligibility__c/fields/Flag__c.field-meta.xml
<CustomField>
    <fullName>Flag__c</fullName>
    <defaultValue>false</defaultValue>
    <label>קשר לא קיים</label>
    <type>Checkbox</type>
</CustomField>