force-app/main/default/objects/Contact_Eligibility__c/fields/For_eligibility_calculation__c.field-meta.xml
<CustomField>
    <fullName>For_eligibility_calculation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>For eligibility calculation</label>
    <type>Checkbox</type>
</CustomField>