force-app/main/default/objects/Contact_Eligibility__c/fields/For_Roll_Up_Summary__c.field-meta.xml
<CustomField>
    <fullName>For_Roll_Up_Summary__c</fullName>
    <description>IF( (Cumulative_eligibility__c = TRUE || For_eligibility_calculation__c = TRUE), TRUE, FALSE)</description>
    <formula>IF( (Cumulative_eligibility__c = TRUE || For_eligibility_calculation__c = TRUE ), TRUE, FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>For Roll-Up Summary</label>
    <type>Checkbox</type>
</CustomField>