force-app/main/default/objects/Contact_Eligibility__c/fields/Freeze2__c.field-meta.xml
<CustomField>
    <fullName>Freeze2__c</fullName>
    <label>Freeze2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>