force-app/main/default/objects/Contact_Eligibility__c/fields/freeze__c.field-meta.xml
<CustomField>
    <fullName>freeze__c</fullName>
    <label>freeze</label>
    <length>255</length>
    <type>Text</type>
</CustomField>