force-app/main/default/objects/Contact_Eligibility__c/fields/Incident_Date__c.field-meta.xml
<CustomField>
    <fullName>Incident_Date__c</fullName>
    <formula>Contact__r.Incident_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Incident Date</label>
    <type>Date</type>
</CustomField>