force-app/main/default/objects/Contact_Eligibility__c/fields/Percentage_of_hostility_disability__c.field-meta.xml
<CustomField>
    <fullName>Percentage_of_hostility_disability__c</fullName>
    <label>Percentage of hostility disability</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>