force-app/main/default/objects/Contact_Eligibility__c/fields/Reason__c.field-meta.xml
<CustomField>
    <fullName>Reason__c</fullName>
    <label>סיבה</label>
    <length>255</length>
    <type>Text</type>
</CustomField>