force-app/main/default/objects/Contact_Eligibility__c/fields/Reason_for_cancellation__c.field-meta.xml
<CustomField>
    <fullName>Reason_for_cancellation__c</fullName>
    <label>Reason for cancellation</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>