force-app/main/default/objects/Contact_Eligibility__c/fields/Recognized_by_Bituach_Leumi__c.field-meta.xml
<CustomField>
    <fullName>Recognized_by_Bituach_Leumi__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Recognized by Bituach Leumi</label>
    <type>Checkbox</type>
</CustomField>