force-app/main/default/objects/Contact_Eligibility__c/fields/Relationship_Table_Type__c.field-meta.xml
<CustomField>
    <fullName>Relationship_Table_Type__c</fullName>
    <formula>TEXT(Eligibity_Table__r.Eligibility_Relationship__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Relationship Table Type</label>
    <type>Text</type>
</CustomField>