force-app/main/default/objects/Contact_Eligibility__c/validationRules/Complete_Eligibility_end_date.validationRule-meta.xml
<ValidationRule>
    <fullName>Complete_Eligibility_end_date</fullName>
    <active>false</active>
    <errorConditionFormula>ISPICKVAL( BL_Eligibility_Type__c , &quot;Temporary&quot;)  &amp;&amp; 
ISBLANK( Eligibility_end_date__c )  &amp;&amp; 
CreatedDate &gt; NOW()</errorConditionFormula>
    <errorDisplayField>Eligibility_end_date__c</errorDisplayField>
    <errorMessage>Complete this field.</errorMessage>
</ValidationRule>