force-app/main/default/objects/Contact_Eligibility__c/validationRules/Complete_Eligibility_start_date.validationRule-meta.xml
<ValidationRule>
    <fullName>Complete_Eligibility_start_date</fullName>
    <active>false</active>
    <errorConditionFormula>(ISPICKVAL(Eligibility_Type__c, &quot;Survivor from the 7.10 party taking part in a recognized rehabilitation program&quot;) ||
ISPICKVAL(Eligibility_Type__c, &quot;Victims of hostilities recognized by Bituach Leumi for eligibility of 20% or more- physical disability and/or 20% or more - mental disability&quot;))  &amp;&amp; 
ISBLANK(  Eligibility_start_date__c )  &amp;&amp; 
CreatedDate &gt; NOW()</errorConditionFormula>
    <errorDisplayField>Eligibility_start_date__c</errorDisplayField>
    <errorMessage>Complete this field.</errorMessage>
</ValidationRule>