force-app/main/default/objects/Contact_Eligibility__c/validationRules/Eligibility_Type_not_change.validationRule-meta.xml
<ValidationRule>
    <fullName>Eligibility_Type_not_change</fullName>
    <active>true</active>
    <errorConditionFormula>ISCHANGED( Eligibility_Type__c )</errorConditionFormula>
    <errorDisplayField>Eligibility_Type__c</errorDisplayField>
    <errorMessage>לא ניתן לשנות את הערך בשדה זה
יש להפוך את הסטטוס למבוטל וליצור רשומת זכאות חדשה עם הערך המתאים</errorMessage>
</ValidationRule>